cabal-version:   3.12
name:            cavefish-server
version:         0.1.0.0

-- synopsis:
-- description:
license:         MIT
license-file:    LICENSE

-- author:
-- maintainer:
-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md
data-files:      config/config.toml

-- extra-source-files:

flag ide-stub
  description: Use IDE stub for PlutusTx compile (for HLS only)
  default:     False
  manual:      True

common base
  build-depends: base >=4.9 && <5

common project-config
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedRecordDot
    OverloadedStrings
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields
    -Wredundant-constraints -Wcompat -Wmissing-import-lists -threaded

library
  import:          base, project-config
  hs-source-dirs:  src
  exposed-modules:
    Adapter.Logging
    Cavefish
    Cavefish.Api.ServerConfiguration
    Cavefish.Endpoints.Read.FetchAccount
    Cavefish.Endpoints.Read.FetchAccounts
    Cavefish.Endpoints.Write.Register
    Cavefish.Endpoints.Write.Session.Demonstrate
    Cavefish.Endpoints.Write.Session.Prove
    Cavefish.Endpoints.Write.Session.Submit
    Cavefish.Performance.LogEvent
    Cavefish.Services.TxBuilding
    Cavefish.Services.WBPS
    Intent.Example.DSL
    Intent.Example.TxBuilder
    Sp.Emulator
    Sp.Middleware
    Sp.Server

  build-depends:
    , aeson
    , async
    , bytestring
    , cardano-api
    , clock
    , containers
    , contra-tracer
    , cooked-validators
    , data-default
    , exceptions
    , http-types
    , monad-time
    , mtl
    , path
    , plutus-ledger
    , plutus-script-utils
    , say
    , servant
    , servant-server
    , stm
    , text
    , time
    , toml-parser
    , wai
    , wai-cors
    , wbps

  if flag(ide-stub)
    cpp-options: -DIDE_STUB

executable cavefish-server
  import:          base, project-config
  hs-source-dirs:  app
  main-is:         Main.hs
  other-modules:   Paths_cavefish_server
  autogen-modules: Paths_cavefish_server
  build-depends:
    , cavefish-server
    , data-default
    , filepath
    , path
    , path-io
    , warp
    , wbps

  if flag(ide-stub)
    cpp-options: -DIDE_STUB

test-suite test
  import:         base, project-config
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  other-modules:
    Core.IntentSpecs
    Spec

  build-depends:
    , cardano-api
    , cavefish-server
    , hspec
    , text
    , wbps
