cabal-version:   3.12
name:            cavefish-tests
version:         0.1.0.0

-- synopsis:
-- description:
license:         MIT
license-file:    LICENSE

-- author:
-- maintainer:
-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

flag ide-stub
  description: Use IDE stub for PlutusTx compile (for HLS only)
  default:     False
  manual:      True

common base
  build-depends: base >=4.9 && <5

common project-config
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedRecordDot
    OverloadedStrings
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -Wall  -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields
    -Wredundant-constraints -Wcompat -Wunused-packages
    -Wmissing-import-lists

library
  import:          base, project-config
  hs-source-dirs:  src
  exposed-modules: MyLib
  build-depends:

  -- TODO need to remove this dependency
  if flag(ide-stub)
    cpp-options: -DIDE_STUB

executable cavefish-test-exe
  import:         base, project-config
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  cavefish-tests

  if flag(ide-stub)
    cpp-options: -DIDE_STUB

test-suite test
  import:         base, project-config
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  other-modules:
    Core.CborSpec
    Spec
    Test.Common

  build-depends:
    , aeson
    , bytestring
    , cardano-api
    , cavefish-client
    , cavefish-core
    , cavefish-server
    , containers
    , cooked-validators
    , crypton
    , directory
    , filepath
    , hspec
    , http-client
    , memory
    , path
    , plutus-ledger
    , plutus-script-utils
    , servant-client
    , servant-server
    , stm
    , temporary
    , text
    , transformers
    , uuid
    , warp
    , wbps
